Fix fluid tooltips?